--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -521,196 +521,6 @@
         </div>
     </div>
 
- <!-- Modal log envio -->
-    <div id="modal-envio" class="modal fade">
-        <div class="modal-dialog" style="width: 500px; max-height: 600px;">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title"><i class="fa fa-archive" style="font-size: 30px;"></i> {% trans "Time line do envio 1288" %}</h4>
-                </div>
-                <div class="modal-body">
-
-                    <div class="qa-message-list">
-
-                        <div class="message-item">
-                            <div class="message-inner">
-                                <div class="message-head clearfix">
-                                    <div class="avatar pull-left"><img src="/static/img/team/4.png"></div>
-                                    <div class="user-detail">
-                                        <h5 class="handle">Nome do usuário</h5>
-                                        <div class="post-meta">
-                                            <div class="asker-meta">
-                                                <span class="qa-message-what"></span>
-                                                <span class="qa-message-when">
-                                                    <span class="qa-message-when-data">Oct 27, 2018</span>
-                                                </span>
-                                                <span class="qa-message-who">
-                                                    <span class="qa-message-who-pad">by </span>
-                                                    <span class="qa-message-who-data">Nome do Usuário</span>
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="qa-message-content">
-                                    <p><strong>Ação:</strong> Envio concluído</p>
-                                    <p><strong>Observação:</strong></p>
-                                </div>
-                        </div>
-                    </div>
-
-                        <div class="message-item">
-                            <div class="message-inner">
-                                <div class="message-head clearfix">
-                                    <div class="avatar pull-left"><img src="/static/img/team/4.png"></div>
-                                    <div class="user-detail">
-                                        <h5 class="handle">Nome do usuário</h5>
-                                        <div class="post-meta">
-                                            <div class="asker-meta">
-                                                <span class="qa-message-what"></span>
-                                                <span class="qa-message-when">
-                                                    <span class="qa-message-when-data">Oct 27, 2018</span>
-                                                </span>
-                                                <span class="qa-message-who">
-                                                    <span class="qa-message-who-pad">by </span>
-                                                    <span class="qa-message-who-data">Nome do Usuário</span>
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="qa-message-content">
-                                    <p><strong>Ação:</strong> Status alterado para checagens finais</p>
-                                    <p><strong>Observação:</strong></p>
-                                </div>
-                        </div>
-                    </div>
-
-                        <div class="message-item">
-                            <div class="message-inner">
-                                <div class="message-head clearfix">
-                                    <div class="avatar pull-left"><img src="/static/img/team/4.png"></div>
-                                    <div class="user-detail">
-                                        <h5 class="handle">Nome do usuário</h5>
-                                        <div class="post-meta">
-                                            <div class="asker-meta">
-                                                <span class="qa-message-what"></span>
-                                                <span class="qa-message-when">
-                                                    <span class="qa-message-when-data">Oct 25, 2018</span>
-                                                </span>
-                                                <span class="qa-message-who">
-                                                    <span class="qa-message-who-pad">by </span>
-                                                    <span class="qa-message-who-data">Nome do Usuário</span>
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="qa-message-content">
-                                    <p><strong>Ação:</strong> Status alterado para Upload de caixa autorizado</p>
-                                    <p><strong>Observação:</strong></p>
-                                </div>
-                        </div>
-                    </div>
-
-                        <div class="qa-message-list">
-                        <div class="message-item">
-                            <div class="message-inner">
-                                <div class="message-head clearfix">
-                                    <div class="avatar pull-left"><img src="/static/img/team/4.png"></div>
-                                    <div class="user-detail">
-                                        <h5 class="handle">Nome do usuário</h5>
-                                        <div class="post-meta">
-                                            <div class="asker-meta">
-                                                <span class="qa-message-what"></span>
-                                                <span class="qa-message-when">
-                                                    <span class="qa-message-when-data">Oct 26, 2018</span>
-                                                </span>
-                                                <span class="qa-message-who">
-                                                    <span class="qa-message-who-pad">by </span>
-                                                    <span class="qa-message-who-data">Nome do Usuário</span>
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="qa-message-content">
-                                    <p><strong>Ação:</strong> Pendências solucionadas </p>
-                                    <p><strong>Observação:</strong></p>
-                                </div>
-                        </div>
-                    </div>
-
-                    <div class="qa-message-list">
-                        <div class="message-item">
-                            <div class="message-inner">
-                                <div class="message-head clearfix">
-                                    <div class="avatar pull-left"><img src="/static/img/team/4.png"></div>
-                                    <div class="user-detail">
-                                        <h5 class="handle">Nome do usuário</h5>
-                                        <div class="post-meta">
-                                            <div class="asker-meta">
-                                                <span class="qa-message-what"></span>
-                                                <span class="qa-message-when">
-                                                    <span class="qa-message-when-data">Oct 25, 2018</span>
-                                                </span>
-                                                <span class="qa-message-who">
-                                                    <span class="qa-message-who-pad">by </span>
-                                                    <span class="qa-message-who-data">Nome do Usuário</span>
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="qa-message-content">
-                                    <p><strong>Ação:</strong> Envio em standby</p>
-                                    <p><strong>Observação:</strong> Necessário cadastro dos produtos na sua loja para proseguir com o envio</p>
-                                </div>
-                        </div>
-                    </div>
-
-
-                    <div class="qa-message-list">
-                        <div class="message-item">
-                            <div class="message-inner">
-                                <div class="message-head clearfix">
-                                    <div class="avatar pull-left"><img src="/static/img/team/4.png"></div>
-                                    <div class="user-detail">
-                                        <h5 class="handle">Nome do usuário</h5>
-                                        <div class="post-meta">
-                                            <div class="asker-meta">
-                                                <span class="qa-message-what"></span>
-                                                <span class="qa-message-when">
-                                                    <span class="qa-message-when-data">Oct 24, 2018</span>
-                                                </span>
-                                                <span class="qa-message-who">
-                                                    <span class="qa-message-who-pad">by </span>
-                                                    <span class="qa-message-who-data">Nome do Usuário</span>
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="qa-message-content">
-                                    <p><strong>Ação:</strong> Envio criado</p>
-                                    <p><strong>Observação:</strong></p>
-                                </div>
-                        </div>
-                    </div>
-
-				</div>
-
-
-
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-fw fa-times-circle"></i> {% trans "Fechar" %}</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
  <!-- Modal nosso endereço -->
     <div id="modal-endereco" class="modal fade">
         <div class="modal-dialog">
@@ -823,6 +633,7 @@
                     <p class="fba-text">{% trans "Afirmo ter analisado atentamente todas as informações deste lote, estando ciente que o prosseguimento desta compra me torna proprietário dos produtos contidos no mesmo, e de toda a responsabilidade acerca do destino que será dado aos mesmos. E isso inclui a VOI Services não realizar reembolso do valor pago em caso de desistência por qualquer motivo." %}</p>
                     <p class="fbm-text">{% trans "Este é um lote para envio MERCHANT. Os itens são destinados a vendedores Ebay, Ecommerce próprio e também para envio internacional." %}</p>
                     <p class="fbm-text">{% trans "Afirmo ter analisado atentamente todas as informações deste lote, estando ciente que o prosseguimento desta compra me torna proprietário dos produtos contidos, e de toda a responsabilidade acerca do destino que será dado aos mesmos. E isso inclui a VOI Services não realizar reembolso do valor pago em caso de desistência por qualquer motivo." %}</p>
+                    <p class="shipment-text">{% trans "Você será direcionado(a) para pagamento no site da PayPal.  Confirma?" %}</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" id="btn-confirmar-modal-compra" data-action-url="" class="btn btn-primary" data-dismiss="modal"><i class="fas fa-check"></i> {% trans "Confirmar Compra" %}</button>
