--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -534,7 +534,7 @@
                 <div class="modal-body">
                     <p>{% trans "Olá" %}, {{ user.first_name }}</p>
                     <p>{% trans "Veja abaixo nosso endereço:" %}</p>
-                    <p>{% trans "1 Lafayette Rd - Building 1, Door D, Hampton, New Hampshire, 03842" %}</p>
+                    <p>{% trans "1 Lafayette Rd - Building 1, Door E (Loading Dock), Hampton, New Hampshire, 03842" %}</p>
                     <p><strong>{% trans "Não esqueça de colocar o seu código de cliente ao lado do seu nome no from." %}</strong></p>
                     <p>{% trans "Para maiores informações, <a href='/pt/termos-e-condicoes-de-uso' class='download'>leia nossos termos</a>" %}</p>
                 </div>
