--- a/html/templates/invoice.html
+++ b/html/templates/invoice.html
@@ -56,7 +56,7 @@
             <li>https://lots.voiservices.com</li>
             <li>(978) 992-8417</li>
             <li> support@voiservices.com</li>
-            <li> 1 Lafayette Rd - Building 1, Door D<br>Hampton, New Hampshire, 03842</li>
+            <li> 1 Lafayette Rd - Building 1, <br>Door E (Loading Dock)<br>Hampton, New Hampshire, 03842</li>
         </ul>
         <ul class="order-details pay">
             {% calculate_invoice_number lot as invoice_number %}
