--- a/html/templates/product_stock.html
+++ b/html/templates/product_stock.html
@@ -96,7 +96,7 @@
                       <br>
                       {{ filter_values.collaborator.address_2 }}
                       {% else %}
-                      1 Lafayette Rd - Building 1, Door D,
+                      1 Lafayette Rd - Building 1, Door E (Loading Dock),
                       <br>
                       Hampton, New Hampshire, 03842
                      {% endif %}
