--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -1140,7 +1140,7 @@ table th a{
 
 .nav > li.tutorial{
     position: fixed;
-    top: 85px;
+    top: 448px;
     left: 0;
     background: red;
     color: #fff;
@@ -1810,9 +1810,9 @@ form small{
 }
 
 .box-resposta{
-    -webkit-box-shadow: -2px 2px 6px -2px rgba(0,0,0,1);
-    -moz-box-shadow: -2px 2px 6px -2px rgba(0,0,0,1);
-    box-shadow: -2px 2px 6px -2px rgba(0,0,0,1);
+    -webkit-box-shadow: 1px 2px 13px 1px rgba(0,0,0,1);
+    -moz-box-shadow: 1px 2px 13px 1px rgba(0,0,0,1);
+    box-shadow: 1px 2px 13px 1px rgba(0,0,0,1);
     width: 400px;
     height: 300px;
     background: #fff;
@@ -1822,6 +1822,7 @@ form small{
     left: 0;
     right: 0;
     bottom: 0;
+    padding: 20px;
 }
 
 .box-resposta .titulo{
@@ -1949,13 +1950,13 @@ form small{
 }
 
 .nav > li.tutorial.adress{
-    top: 262px;
+    top: 601px;
     background: #fff;
     border: 1px solid #858585;
 }
 
 .nav > li.tutorial.adress.adress-v{
-    top: 170px;
+    top: 511px;
 }
 
 .nav > li.tutorial.adress a{
@@ -2690,6 +2691,50 @@ ul.listaancora li a{
 .message-item img {
      min-height: 40px;
      max-height: 40px;
+}
+
+.carousel{
+    margin-top: 20px;
+    background: #DC3438;
+    height: 300px;
+}
+.carousel .item{
+    min-height: 300px;
+}
+.carousel .item img{
+    margin: 0 auto;
+}
+.bs-example{
+	margin: 20px;
+}
+
+.carousel-control.left, .carousel-control.right{
+    background: transparent;
+}
+
+.nav>li>a {
+    padding: 10px 8px;
+}
+
+.navbar-nav>li>a {
+    line-height: 21px;
+    text-transform: uppercase;
+    font-size: 13px;
+}
+
+.cab-index{
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.btn-quadrado{
+    text-transform: initial;
+    font-size: 13px;
+    font-weight: bold;
+    color: #777;
+    margin-left: 17px;
 }
 
 @media (min-width: 1350px){
