--- a/html/templates/main.html
+++ b/html/templates/main.html
@@ -23,7 +23,7 @@
                     <p class="card-text"><strong>Acesse agora os lotes disponíveis na plataforma.</strong></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="#" class="btn btn-default"><i class="fa fa-link"></i> Acessar</a>
+                      <a href="{% url 'store' %}" class="btn btn-default"><i class="fa fa-link"></i> Acessar</a>
                     </div>
                     <!-- <small class="text-muted">9 mins</small>-->
                   </div>
@@ -38,7 +38,7 @@
                     <p class="card-text"><strong>Acesse agora seu estoque na nossa warehouse.</strong></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="#" class="btn btn-default"><i class="fa fa-link"></i> Acessar</a>
+                      <a href="{% url 'product_stock' %}" class="btn btn-default"><i class="fa fa-link"></i> Acessar</a>
                     </div>
                     <!-- <small class="text-muted">9 mins</small>-->
                   </div>
@@ -53,7 +53,7 @@
                     <p class="card-text"><strong>Acesse, acompanhe e administre seus envios.</strong></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="#" class="btn btn-default"><i class="fa fa-link"></i> Acessar</a>
+                      <a href="{% url 'shipment' %}" class="btn btn-default"><i class="fa fa-link"></i> Acessar</a>
                     </div>
                     <!-- <small class="text-muted">9 mins</small>-->
                   </div>
@@ -68,7 +68,7 @@
                     <p class="card-text"><strong>Acesse agora seus lotes comprados e invoices.</strong></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="#" class="btn btn-default"><i class="fa fa-link"></i> Acessar</a>
+                      <a href="{% url 'store_purchase' %}" class="btn btn-default"><i class="fa fa-link"></i> Acessar</a>
                     </div>
                     <!-- <small class="text-muted">9 mins</small>-->
                   </div>
@@ -83,7 +83,7 @@
                     <p class="card-text"><strong>Para alterar suas informações, assinaturas e cancelamentos.</strong></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="#" class="btn btn-default"><i class="fa fa-link"></i> Acessar</a>
+                      <a href="{% url 'user_edit' %}" class="btn btn-default"><i class="fa fa-link"></i> Acessar</a>
                     </div>
                     <!-- <small class="text-muted">9 mins</small>-->
                   </div>
